--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,6 @@ fabric.properties
 # pytype static type analyzer
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,django,python
+
+.config/
+supervisord.conf
